--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,50 +16,220 @@ body {
     background-size: 200%;
 }
 
+body
+{
+  margin: 0;
+  padding: 0;
+  
+  /* make it look decent enough */
+  background: #232323;
+  color: #cdcdcd;
+  font-family: "Avenir Next", "Avenir", sans-serif;
+}
+
+#menuToggle
+{
+  display: block;
+  position: relative;
+  top: 50px;
+  left: 50px;
+  
+  z-index: 1;
+  
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle a
+{
+  text-decoration: none;
+  color: #232323;
+  
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover
+{
+  color: tomato;
+}
+
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  
+  cursor: pointer;
+  
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  background: #cdcdcd;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+
 header h1{
     padding: 20px 10px;
     letter-spacing: 0.2em;
     color:white;
 }
-
-form * {
-    background: rgba(256,256,256, 0.3);
-    color:white;
-}
-
-form .search,
-form .btn {
-    padding:10px;
-    border-radius: 2px;
-    font-size:16px;
-    border: 1px solid white;
-}
-
-::placeholder {
-    color: #f5f5f5;
-}
-
-form .search {
-    width: 40%;
-    min-width: 200px;
-    max-width: 600px;
-}
-
-form .search:focus {
-    outline: 0;
-    background: #333;
-    box-shadow: 0 0 1px 1px rgba(0,0,0, 0.3);
-}
-
-form .btn {
+form {
+    display: flex;
+    flex-wrap: wrap;
+    width: 85%;
+    margin: 0 auto;
+  }
+  
+  input[type="search"] {
+    border: none;
+    whitespace: wrap;
+    border-radius: 5px 5px 5px 5px;
+      background: #E9E9E9;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      padding: 0.35em 0.75em;
+      border: none;
+      font-size: 1.1em;
+      text-decoration: none;
+      line-height: normal;
+      max-height: 3em;
+    
+    flex: 2 0 250px;
+  }
+  
+  input[type="search"]:focus {
+    background: Thistle;
+    color: white;
+    letter-spacing: .1em;
+    transition: background 400ms ease-in-out;
+    outline: none;
+  }
+  
+  button {
+    flex: 1 0 90px;
+    
+    max-height: 3em;
+    font-size: 1.1em;
+    letter-spacing: .2em;
+    text-transform: uppercase;
+    border-radius: 0px 5px 5px 0px;
+      background: blue;
+    color: white;
+    border: none;
+    padding: 0.35em 0.75em;
     cursor: pointer;
-    width: 60px;
-}
-
-form .btn:hover {
-    color: #333;
-    background: white;
-}
+  
+  }
+  button:hover {
+    background: skyblue;
+  }
+  
+  @media (max-width: 900px) {
+    body {
+      width: 100%;
+    }
 
 .giphy {
     padding: 20px 0 15px 0;
@@ -93,4 +263,3 @@ footer a:hover {
     color: white;
     text-decoration: underline;
 }
-
