--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,16 +16,67 @@ body {
     background-size: 200%;
 }
 
-body
-{
-  margin: 0;
-  padding: 0;
-  
-  /* make it look decent enough */
-  background: #232323;
-  color: #cdcdcd;
-  font-family: "Avenir Next", "Avenir", sans-serif;
+header h1 {
+  padding: 20px 10px;
+  letter-spacing: 0.2em;
+  color: white;
 }
+field * {
+  background: rgba(256, 256, 256, 0.3);
+  color: white;
+}
+
+#btn {
+  padding: 10px;
+  border-radius: 2px;
+  font-size: 16px;
+  border: 2px solid white;
+}
+
+::placeholder {
+  color: #f5f5f5;
+}
+
+#search {
+  padding: 11px;
+  width: 40%;
+  min-width: 200px;
+  max-width: 400px;
+  border: 2px solid white ;
+}
+
+#search {
+  outline: 0;
+  color: #333;
+  background: white;
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.3);
+}
+
+#btn {
+  cursor: pointer;
+  width: 90px;
+}
+
+
+#giphy {
+  padding: 20px 0px 15px 0;
+}
+
+#giphy img {
+  width: 500px;
+  max-width: 800px;
+  margin: auto;
+  display: block;
+}
+
+giphy img.gif {
+  width: 50%;
+  max-width: 450px;
+  box-shadow: 0 0 1px 1px rgba(256, 256, 256, 0.3);
+}
+
+
+
 
 #menuToggle
 {
@@ -155,6 +206,7 @@ body
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
+
 #menu li
 {
   padding: 10px 0;
@@ -174,52 +226,7 @@ header h1{
     letter-spacing: 0.2em;
     color:white;
 }
-//Removed Unnecessary form//
-  input[type="search"] {
-    border: none;
-    whitespace: wrap;
-    border-radius: 5px 5px 5px 5px;
-      background: #E9E9E9;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      padding: 0.35em 0.75em;
-      border: none;
-      font-size: 1.1em;
-      text-decoration: none;
-      line-height: normal;
-      max-height: 3em;
-    
-    flex: 2 0 250px;
-  }
-  
-  input[type="search"]:focus {
-    background: Thistle;
-    color: white;
-    letter-spacing: .1em;
-    transition: background 400ms ease-in-out;
-    outline: none;
-  }
-  
-  button {
-    flex: 1 0 90px;
-    
-    max-height: 3em;
-    font-size: 1.1em;
-    letter-spacing: .2em;
-    text-transform: uppercase;
-    border-radius: 0px 5px 5px 0px;
-      background: blue;
-    color: white;
-    border: none;
-    padding: 0.35em 0.75em;
-    cursor: pointer;
-  
-  }
-  button:hover {
-    background: skyblue;
-  }
-  
+
   @media (max-width: 900px) {
     body {
       width: 100%;
@@ -242,10 +249,12 @@ header h1{
     box-shadow: 0 0 1px 1px rgba(256,256,256, 0.3);
 }
 
-footer {
+.footer {
     padding:5px;
+    flex-shrink: 0;
+    padding: 20px;
     font-size: 14px;
-    color: white;
+    color:#232323;
 }
 
 footer a {
