--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,10 +3,18 @@
     padding:0;
     box-sizing: border-box;
 }
-
+*,*:before,*:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
+html,body{min-height:100%;font-size:16px;}
+body{margin:0;color:#000000;background: #fff;font-family: 'Roboto', sans-serif;line-height:1.6}
+p{margin:0 0 1.5em 0;}
+form{padding:0;margin:0}
+a{color:#000;}
+a img{border:none;}
+a:focus{outline: none;}
 body {
     display:flex;
     flex-direction: column;
+    position:absolute;
     justify-content: space-between;
     font-family:Arial;
     text-align:center;
@@ -16,210 +24,84 @@ body {
     background-size: 200%;
 }
 
+
+}
+
 header h1 {
   padding: 20px 10px;
   letter-spacing: 0.2em;
   color: white;
 }
-field * {
-  background: rgba(256, 256, 256, 0.3);
-  color: white;
+.title-search-bar {
+  text-align: center;
+  .search-btn {
+      margin: 3px;
+  }
+  #submit,
+  .trending {
+      margin-bottom: 6px;
+  }
+  .search-bar {
+      margin-top: 0.4rem;
+  }
+
+
+#results {
+  margin: 0 auto;
+  width: 1200px;
 }
 
-#btn {
-  padding: 10px;
-  border-radius: 2px;
-  font-size: 16px;
-  border: 2px solid white;
+.gif-box {
+  margin: 0.5rem;
+  display: inline-block;
+  border: 1px solid black;
+  height: auto;
+  width: auto;
+  img {
+      display: block;
+  }
+  h6 {
+      font-weight: bold;
+      text-align: center;
+  }
 }
 
-::placeholder {
-  color: #f5f5f5;
+/*******************************************************/
+/* Header
+/*******************************************************/
+
+.header-wrapper{background-image: linear-gradient( 135deg, #454545 0%, #9708CC 100%);}
+.header{padding:30px 0px;color:#fff;position:absolute;}
+.header a.logo{color:#fff;margin:0;font-size:3em;letter-spacing:-1px;text-decoration:none;text-shadow:.5px .5px 1px rgba(0,0,0,0.6)}
+
+.social{position:absolute;top:50px;right:0;background:rgba(255,255,255,0.5);padding:5px;border-radius:5px}
+.social:hover{background:#fff}
+/*******************************************************/
+/*Navbar
+/*******************************************************/
+
+
+
+.navbar-brand {
+  float: left;
+  min-height: 55px;
+  padding: 0 15px 5px;
+}
+.navbar-inverse .navbar-nav .active a, .navbar-inverse .navbar-nav .active a:focus, .navbar-inverse .navbar-nav .active a: hover{
+  color: #FFF;
+  background-color:#5e4485
 }
 
-#search {
-  padding: 11px;
-  width: 40%;
-  min-width: 200px;
-  max-width: 400px;
-  border: 2px solid white ;
+.navbar-inverse .navbar-nav li a {
+  color:#D5D5D5;
+}
+.carousel-caption {
+  top: 50%;
+  transform: translateY(-50%);
+  text-transform: uppercase;
+
 }
 
-#search {
-  outline: 0;
-  color: #333;
-  background: white;
-  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.3);
-}
-
-#btn {
-  cursor: pointer;
-  width: 90px;
-}
-
-
-#giphy {
-  padding: 20px 0px 15px 0;
-}
-
-#giphy img {
-  width: 500px;
-  max-width: 800px;
-  margin: auto;
-  display: block;
-}
-
-giphy img.gif {
-  width: 50%;
-  max-width: 450px;
-  box-shadow: 0 0 1px 1px rgba(256, 256, 256, 0.3);
-}
-
-
-
-
-#menuToggle
-{
-  display: block;
-  position: relative;
-  top: 50px;
-  left: 50px;
-  
-  z-index: 1;
-  
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-#menuToggle a
-{
-  text-decoration: none;
-  color: #232323;
-  
-  transition: color 0.3s ease;
-}
-
-#menuToggle a:hover
-{
-  color: tomato;
-}
-
-
-#menuToggle input
-{
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
-  
-  cursor: pointer;
-  
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-  
-  -webkit-touch-callout: none;
-}
-
-/*
- * Just a quick hamburger
- */
-#menuToggle span
-{
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-  
-  background: #cdcdcd;
-  border-radius: 3px;
-  
-  z-index: 1;
-  
-  transform-origin: 4px 0px;
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
-}
-
-#menuToggle span:first-child
-{
-  transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2)
-{
-  transform-origin: 0% 100%;
-}
-
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span
-{
-  opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
-}
-
-/*
- * But let's hide the middle one.
- */
-#menuToggle input:checked ~ span:nth-last-child(3)
-{
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
-  transform: rotate(-45deg) translate(0, -1px);
-}
-
-/*
- * Make this absolute positioned
- * at the top left of the screen
- */
-#menu
-{
-  position: absolute;
-  width: 300px;
-  margin: -100px 0 0 -50px;
-  padding: 50px;
-  padding-top: 125px;
-  
-  background: #ededed;
-  list-style-type: none;
-  -webkit-font-smoothing: antialiased;
-  /* to stop flickering of text in safari */
-  
-  transform-origin: 0% 0%;
-  transform: translate(-100%, 0);
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-}
-
-
-#menu li
-{
-  padding: 10px 0;
-  font-size: 22px;
-}
-
-/*
- * And let's slide it in from the left
- */
-#menuToggle input:checked ~ ul
-{
-  transform: none;
-}
 
 header h1{
     padding: 20px 10px;
@@ -249,20 +131,12 @@ header h1{
     box-shadow: 0 0 1px 1px rgba(256,256,256, 0.3);
 }
 
-.footer {
-    padding:5px;
-    flex-shrink: 0;
-    padding: 20px;
-    font-size: 14px;
-    color:#232323;
-}
+/* Footer
+/*******************************************************/
+footer {
+  width:100%;
+  background-color:#5e4485;
+  padding:3%;
+  color:rgb(255, 255, 255);
 
-footer a {
-    color: #333;
-    text-decoration:none;
-}
-
-footer a:hover {
-    color: white;
-    text-decoration: underline;
 }
